--- a/modules/core/client/css/new-age.css
+++ b/modules/core/client/css/new-age.css
@@ -154,9 +154,9 @@ header.masthead {
   padding-top: 150px;
   padding-bottom: 100px;
   color: white;
-  background: url("../img/bg-pattern.png"), #7b4397;
-  background: url("../img/bg-pattern.png"), -webkit-linear-gradient(to left, #7b4397, #dc2430);
-  background: url("../img/bg-pattern.png"), linear-gradient(to left, #7b4397, #dc2430);
+  background: url("../img/backgrounds/bg-pattern.png"), #7b4397;
+  background: url("../img/backgrounds/bg-pattern.png"), -webkit-linear-gradient(to left, #7b4397, #dc2430);
+  background: url("../img/backgrounds/bg-pattern.png"), linear-gradient(to left, #7b4397, #dc2430);
 }
 
 header.masthead .header-content {
@@ -285,7 +285,7 @@ section.features .feature-item i {
 section.cta {
   position: relative;
   padding: 250px 0;
-  background-image: url("../img/bg-cta.jpg");
+  background-image: url("../img/backgrounds/bg-cta.jpg");
   background-position: center;
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -513,16 +513,6 @@ footer ul li a:hover, footer ul li a:focus, footer ul li a:active, footer ul li 
     color: #fdcc52;
  }
 }
-header.masthead {
-  position: relative;
-  width: 100%;
-  padding-top: 150px;
-  padding-bottom: 100px;
-  color: white;
-  background: url('../img/bg-pattern.png'), #7b4397;
-  background: url('../img/bg-pattern.png'), -webkit-linear-gradient(to left, #7b4397, #dc2430);
-  background: url('../img/bg-pattern.png'), linear-gradient(to left, #7b4397, #dc2430);
-}
 header.masthead .header-content {
   max-width: 500px;
   margin-bottom: 100px;
@@ -689,16 +679,6 @@ section.download .badges .badge-link img {
   section.download h2 {
     font-size: 70px;
  }
-}
-section.cta {
-  position: relative;
-  padding: 250px 0;
-  background-image: url('../img/bg-cta.jpg');
-  background-position: center;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
 }
 section.cta .cta-content {
   position: relative;
